# rustable

./: Cargo.toml
src/: lib.rs  traits.rs  types.rs
src/index/: iter.rs  mod.rs
src/series/: dense.rs  error.rs  iter.rs  mod.rs  sparse.rs  values.rs
src/series/dense/: iter.rs  mod.rs
src/series/sparse/: mod.rs
src/testing/: index.rs  label.rs  mod.rs
