[package]
name = "rustable"
version = "0.1.0"
authors = ["Mark LeMoine <linclelinkpart5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "0.1"
indexmap = "1.4"
chrono = { version = "0.4", optional = true }
rust_decimal = { version = "1.6", optional = true }
is_sorted = "0.1.1"

[dev-dependencies]
str-macro = "0.1.4"
proptest = "0.10"

[features]

# Include `i128`/`u128` as data types.
128 = []

# Include `Decimal` as a data type.
decimal = ["rust_decimal"]

# Include `Date`/`Time`/`DateTime` as data types.
date-time = ["chrono"]
